# rocCV

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  requirements.txt  roccv-setup.py
.githooks/: pre-commit
.jenkins/: common.groovy  precheckin.groovy
benchmarks/: CMakeLists.txt  README.md  bench_composite.cpp  bench_rotate.cpp  bench_warp_perspective.cpp  config.json  generate_graphs.py  main.cpp  run_bench.py
benchmarks/roccvbench/: CMakeLists.txt
benchmarks/roccvbench/src/: utils.cpp
benchmarks/src/: bench_bilateral_filter.cpp  bench_composite.cpp  bench_copy_make_border.cpp  bench_custom_crop.cpp  bench_cvt_color.cpp  bench_flip.cpp  bench_gamma_contrast.cpp  bench_histogram.cpp  bench_normalize.cpp  bench_resize.cpp  bench_rotate.cpp  bench_threshold.cpp  bench_warp_affine.cpp  bench_warp_perspective.cpp  main.cpp
docs/: conf.py  generating-documentation.md  index.rst  supported-operators.md
docs/conceptual/: component-CONCEPT.rst
docs/cpp/: getting-started-cpp.md
docs/doxygen/: Doxyfile  Doxyfile.orig
docs/doxygen/html/: annotated.html  annotated.rst  annotated_classes.rst  array__wrapper_8hpp.html  array__wrapper_8hpp.rst  array__wrapper_8hpp_source.html  array__wrapper_8hpp_source.rst  bilateral__filter__device_8hpp.html  bilateral__filter__device_8hpp.rst  bilateral__filter__device_8hpp_source.html  bilateral__filter__device_8hpp_source.rst  bilateral__filter__host_8hpp.html  bilateral__filter__host_8hpp.rst  bilateral__filter__host_8hpp_source.html  bilateral__filter__host_8hpp_source.rst  bnd__box__device_8hpp.html  bnd__box__device_8hpp.rst  bnd__box__device_8hpp_source.html  bnd__box__device_8hpp_source.rst  bnd__box__host_8hpp.html  bnd__box__host_8hpp.rst  bnd__box__host_8hpp_source.html  bnd__box__host_8hpp_source.rst  border__wrapper_8hpp.html  border__wrapper_8hpp.rst  (+616 more)
docs/how-to/: component-HOWTO.rst  getting-started-python.md  using-rocCV-cpp.rst  using-rocCV-python.rst
docs/install/: rocCV-build-and-install.rst  rocCV-package-install.rst  rocCV-prerequisites.rst
docs/reference/: component-REFERENCE.rst  rocCV-supported-operators.rst
docs/sphinx/: _toc.yml  _toc.yml.in  requirements.txt
docs/tutorials/: component-SAMPLES-EXAMPLES-TITORIALS.rst
include/: i_operator.hpp  op_bilateral_filter.hpp  op_bnd_box.hpp  op_center_crop.hpp  op_composite.hpp  op_copy_make_border.hpp  op_custom_crop.hpp  op_cvt_color.hpp  op_flip.hpp  op_gamma_contrast.hpp  op_histogram.hpp  op_non_max_suppression.hpp  op_normalize.hpp  op_remap.hpp  op_resize.hpp  op_rotate.hpp  op_thresholding.hpp  op_warp_affine.hpp  op_warp_perspective.hpp  operator_types.h  roccv_operators.hpp
include/common/: array_wrapper.hpp  conversion_helpers.hpp  math_vector.hpp  strided_data_wrap.hpp  validation_helpers.hpp
include/core/: data_type.hpp  exception.hpp  hip_assert.h  image_format.hpp  status_type.h  tensor.hpp  tensor_buffer.hpp  tensor_data.hpp  tensor_layout.hpp  tensor_requirements.hpp  tensor_shape.hpp  tensor_storage.hpp  util_enums.h
include/kernels/: kernel_helpers.hpp
python/: CMakeLists.txt
python/include/: py_enums.hpp  py_exception.hpp  py_helpers.hpp  py_stream.hpp  py_structs.hpp  py_tensor.hpp
python/include/operators/: py_op_bilateral_filter.hpp  py_op_bnd_box.hpp  py_op_center_crop.hpp  py_op_composite.hpp  py_op_copy_make_border.hpp  py_op_custom_crop.hpp  py_op_cvt_color.hpp  py_op_flip.hpp  py_op_gamma_contrast.hpp  py_op_histogram.hpp  py_op_non_max_suppression.hpp  py_op_normalize.hpp  py_op_remap.hpp  py_op_resize.hpp  py_op_rotate.hpp  py_op_thresholding.hpp  py_op_warp_affine.hpp  py_op_warp_perspective.hpp
python/src/: main.cpp  py_enums.cpp  py_exception.cpp  py_helpers.cpp  py_stream.cpp  py_structs.cpp  py_tensor.cpp
python/src/operators/: py_op_bilateral_filter.cpp  py_op_bnd_box.cpp  py_op_center_crop.cpp  py_op_composite.cpp  py_op_copy_make_border.cpp  py_op_custom_crop.cpp  py_op_cvt_color.cpp  py_op_flip.cpp  py_op_gamma_contrast.cpp  py_op_histogram.cpp  py_op_non_max_suppression.cpp  py_op_normalize.cpp  py_op_remap.cpp  py_op_resize.cpp  py_op_rotate.cpp  py_op_thresholding.cpp  py_op_warp_affine.cpp  py_op_warp_perspective.cpp
python/src/rocpycv/: __init__.py  __init__.pyi  rocpycv.pyi
samples/: CMakeLists.txt  README.md  bilateral_filter.cpp  bnd_box.cpp  center_crop.cpp  composite.cpp  copy_make_border.cpp  custom_crop.cpp  gamma_contrast.cpp  normalize.cpp  warp_perspective.cpp
samples/common/: utils.hpp
samples/cropandresize/cpp/: CMakeLists.txt  main.cpp
samples/cropandresize/python/: README.md  cropandresize.py
samples/pipeline/: multi_op_1.py
src/: CMakeLists.txt  op_bilateral_filter.cpp  op_bnd_box.cpp  op_center_crop.cpp  op_composite.cpp  op_copy_make_border.cpp  op_custom_crop.cpp  op_cvt_color.cpp  op_flip.cpp  op_gamma_contrast.cpp  op_histogram.cpp  op_non_max_suppression.cpp  op_normalize.cpp  op_remap.cpp  op_resize.cpp  op_rotate.cpp  op_thresholding.cpp  op_warp_affine.cpp  op_warp_perspective.cpp  operator_types.cpp
src/core/: data_type.cpp  exception.cpp  image_format.cpp  tensor.cpp  tensor_data.cpp  tensor_shape.cpp  tensor_storage.cpp
src/core/detail/: context.cpp
src/core/detail/allocators/: default_allocator.cpp
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  math_utils.cpp  math_utils.hpp  roccv_binio.hpp  test_helpers.cpp  test_helpers.hpp
tests/pybind/: CMakeLists.txt  rocpycv_test.py
tests/roccv/: CMakeLists.txt
tests/roccv/cpp/: CMakeLists.txt  test_border_wrapper.cpp  test_image_wrapper.cpp  test_interpolation_wrapper.cpp  test_op_bilateral_filter.cpp  test_op_bnd_box.cpp  test_op_center_crop.cpp  test_op_composite.cpp  test_op_copy_make_border.cpp  test_op_custom_crop.cpp  test_op_cvt_color.cpp  test_op_flip.cpp  test_op_gamma_contrast.cpp  test_op_histogram.cpp  test_op_non_max_suppression.cpp  test_op_normalize.cpp  test_op_remap.cpp  test_op_resize.cpp  test_op_rotate.cpp  test_op_thresholding.cpp  test_op_warp_affine.cpp  test_op_warp_perspective.cpp  test_range_cast.cpp  test_swizzling.cpp  test_tensor.cpp
(+221 files in other folders)
